--- a/app/views/layouts/_menu.html.haml
+++ b/app/views/layouts/_menu.html.haml
@@ -1,3 +1,5 @@
 %ul
-  %li= link_to 'Ajankohtaista', admin_news_path
+  %li= link_to 'Ajankohtaista', admin_news_index_path
+  %li= link_to 'Kaudet', admin_seasons_path
+  %li= link_to 'Joukkueosiot', admin_sections_path
   
