--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -9,5 +9,6 @@
   %body
     .header#header
       = render :partial => 'layouts/header'
-      .menu#menu= render :partial => 'layouts/menu'
+    .menu#menu= render :partial => 'layouts/menu'
     .content#content= yield
+    #footer © Ilmajoen Salibandy
