--- a/app/views/admin/news/edit.html.haml
+++ b/app/views/admin/news/edit.html.haml
@@ -1,5 +1,5 @@
 %h1= t '.title'
 %p
-  = link_to t('back'), news_path
+  = link_to t('back'), admin_news_index_path
   = link_to t('show'), @news
 = render 'form'
