--- a/app/views/admin/news/index.html.haml
+++ b/app/views/admin/news/index.html.haml
@@ -1,16 +1,15 @@
-%h1= t('.title')
-%p= link_to t('.new_news'), new_admin_news_path
+%h1 Ajankohtaista
+%p= link_to 'Luo uusi uutinen', new_admin_news_path
 
 %table
   %thead
     %tr
-
-      %th{:colspan => 3}= t 'actions'
+      %th{:colspan => 3}= 'Uutiset'
   
   %tbody
     - for news in @news
       %tr{ :class => cycle(:odd, :even) }
 
-        %td.action= link_to t('show'), news
-        %td.action= link_to t('edit'), edit_news_path(news)
-        %td.action= link_to t('destroy'), news, :confirm => t('are_you_sure'), :method => :delete
+        %td.action= link_to 'Näytä', news
+        %td.action= link_to 'Muokkaa', edit_news_path(news)
+        %td.action= link_to 'Poista', news, :confirm => t('are_you_sure'), :method => :delete
