--- a/app/views/layouts/admin/_menu.html.haml
+++ b/app/views/layouts/admin/_menu.html.haml
@@ -1,2 +1,4 @@
 %ul
   %li= link_to 'Ajankohtaista', admin_news_index_path
+  %li= link_to 'Kaudet', admin_seasons_path
+  %li= link_to 'Joukkueosiot', admin_sections_path
