--- a/app/views/admin/news/index.html.haml
+++ b/app/views/admin/news/index.html.haml
@@ -1,15 +1,15 @@
 %h1 Ajankohtaista
 %p= link_to 'Luo uusi uutinen', new_admin_news_path
-
+#notice= notice
 %table
   %thead
     %tr
       %th{:colspan => 3}= 'Uutiset'
   
   %tbody
-    - for news in @news
+    - for news_post in @news
       %tr{ :class => cycle(:odd, :even) }
 
-        %td.action= link_to 'Näytä', news
-        %td.action= link_to 'Muokkaa', edit_news_path(news)
-        %td.action= link_to 'Poista', news, :confirm => t('are_you_sure'), :method => :delete
+        %td= news_post
+        %td.action= link_to 'Muokkaa', edit_admin_news_path(news_post)
+        %td.action= link_to 'Poista', admin_news_path(news_post), :confirm => 'Oletko varma?', :method => :delete
