Added comments with validations and will_pagine. Added two new gems, RUN bundle install!! fixed minor things

--- a/app/views/admin/news/edit.html.haml
+++ b/app/views/admin/news/edit.html.haml
@@ -1,5 +1,9 @@
 %h1= t '.title'
 %p
   = link_to 'Takaisin', admin_news_index_path
-  = link_to 'Näytä', admin_news_path @news
-= render 'form'
+  = link_to 'Näytä', admin_news_path(@news)
+  
+- semantic_form_for @news, :url => admin_news_path(@news) do |form| 
+  = render :partial => 'form', :object => form
+  - form.buttons do
+    = form.commit_button :label => 'Tallenna'
