--- a/app/views/admin/news/index.html.haml
+++ b/app/views/admin/news/index.html.haml
@@ -1,13 +1,12 @@
 %h1 Ajankohtaista
 %p= link_to 'Luo uusi uutinen', new_admin_news_path
-#notice= notice
 %table
   %thead
     %tr
       %th{:colspan => 3}= 'Uutiset'
   
   %tbody
-    - for news_post in @news
+    - @news.each do |news_post|
       %tr{ :class => cycle(:odd, :even) }
 
         %td= news_post
