--- a/app/views/layouts/admin/_menu.html.haml
+++ b/app/views/layouts/admin/_menu.html.haml
@@ -2,3 +2,4 @@
   %li= link_to 'Ajankohtaista', admin_news_index_path
   %li= link_to 'Kaudet', admin_seasons_path
   %li= link_to 'Joukkueosiot', admin_sections_path
+  %li= link_to 'Vieraskirja', admin_comments_path
