--- a/app/views/admin/comments/index.html.haml
+++ b/app/views/admin/comments/index.html.haml
@@ -4,15 +4,21 @@
 %table
   %thead
     %tr
-      %th{:colspan => 5}= 'Vieraskirja merkinnät'
+      %th= 'Joukkueosio'
+      %th= 'Aika'
+      %th= 'Otsikko'
+      %th= 'Kirjoittaja'
+      %th{:colspan => 25}= 'Toiminnot'
   
   %tbody
     - for comment in @admin_comments
       %tr{ :class => cycle(:odd, :even), :id => "comment-#{comment.id}" }
         %td= comment.commentable
+        %td= comment.created_at
         %td= comment.title
         %td= comment.author
         %td.action= link_to 'Muokkaa', edit_admin_comment_path(comment)
-        %td.action= link_to 'poista', admin_comment_path(comment), :confirm => 'Oletko varma?', :method => :delete
+        %td.action= link_to 'Poista', admin_comment_path(comment),
+          :confirm => "Haluatko varmasti poistaa viestin \"#{comment.title}\"?", :method => :delete
 
 = will_paginate @admin_comments
