--- a/app/views/admin/comments/new.html.haml
+++ b/app/views/admin/comments/new.html.haml
@@ -1,5 +1,5 @@
-%h1= t '.title'
-%p= link_to t('back'), admin_comments_path
+%h1= 'Luo uusi viesti'
+%p= link_to 'Takaisin', admin_comments_path
 
 - semantic_form_for @admin_comment, :url => admin_comments_path() do |form| 
   = render :partial => 'form', :object => form
