--- a/app/views/layouts/admin/application.html.haml
+++ b/app/views/layouts/admin/application.html.haml
@@ -10,9 +10,8 @@
     .header#header
       = render :partial => 'layouts/admin/header'
     .menu#menu= render :partial => 'layouts/admin/menu'
-    
-    .content
-      #notice
-        = flash[:warning] || flash[:notice]
-      #content= yield
+
+    #content
+      #notice= flash[:warning] || flash[:notice]
+      = yield
     #footer © Ilmajoen Salibandy
