--- a/app/views/admin/news/index.html.haml
+++ b/app/views/admin/news/index.html.haml
@@ -1,14 +1,19 @@
 %h1 Ajankohtaista
 %p= link_to 'Luo uusi uutinen', new_admin_news_path
+%h2 Uutiset
 %table
   %thead
     %tr
-      %th{:colspan => 3}= 'Uutiset'
-  
+      %th Otsikko
+      %th Aika
+      %th{:colspan => 2}= 'Toiminnot'
+      
   %tbody
     - @news.each do |news_post|
       %tr{ :class => cycle(:odd, :even) }
 
         %td= news_post
-        %td.action= link_to 'Muokkaa', edit_admin_news_path(news_post)
-        %td.action= link_to 'Poista', admin_news_path(news_post), :confirm => 'Oletko varma?', :method => :delete
+        %td= news_post.created_at
+        %td.action= link_to image_tag('pencil.png'), edit_admin_news_path(news_post), :title => 'Muokkaa'
+        %td.action= link_to image_tag('cross.png'), admin_news_path(news_post), :title => 'Poista',
+          :confirm => "Haluatko varmasti poistaa uutisen \"#{news_post}\"?", :method => :delete
