--- a/app/views/layouts/admin/application.html.haml
+++ b/app/views/layouts/admin/application.html.haml
@@ -14,4 +14,7 @@
     #content
       #notice= flash[:warning] || flash[:notice]
       = yield
-    #footer © Ilmajoen Salibandy
+      
+    #footer
+      Ilmajoen Salibandy - 
+      %a{:href => 'http://www.famfamfam.com/lab/icons/silk/'} Silk Icon Set by Mark James
