--- a/app/views/admin/news/new.html.haml
+++ b/app/views/admin/news/new.html.haml
@@ -2,7 +2,7 @@
 
 %p= link_to 'Takaisin', admin_news_index_path
 
-- semantic_form_for @news, :url => admin_news_index_path do |form| 
+= semantic_form_for @news, :url => admin_news_index_path do |form| 
   = render :partial => 'form', :object => form
-  - form.buttons do
+  = form.buttons do
     = form.commit_button :label => 'Luo uusi'
