Changed section to plural form in News model. Removed the one-to-one reference from news migration.

--- a/app/views/admin/news/_form.html.haml
+++ b/app/views/admin/news/_form.html.haml
@@ -1,7 +1,5 @@
 = form.inputs do
-  = form.input :section, :as => :check_boxes, :label => 'Joukkueosiot',
+  = form.input :sections, :as => :check_boxes, :label => 'Joukkueosiot',
     :collection => Section.find(:all, :conditions => ["parent_id NOT NULL"])
   = form.input :title, :label => 'Otsikko'
   = form.input :content, :label => 'Sisältö'
-  
-
