--- a/app/views/admin/comments/edit.html.haml
+++ b/app/views/admin/comments/edit.html.haml
@@ -2,7 +2,7 @@
 %p
   = link_to 'Takaisin', admin_comments_path
   
-- semantic_form_for @admin_comment, :url => admin_comment_path(@admin_comment) do |form| 
+= semantic_form_for @admin_comment, :url => admin_comment_path(@admin_comment) do |form| 
   = render :partial => 'form', :object => form
-  - form.buttons do
+  = form.buttons do
     = form.commit_button "Tallenna"
