Added leafs scope.

--- a/app/views/admin/comments/_form.html.haml
+++ b/app/views/admin/comments/_form.html.haml
@@ -1,7 +1,7 @@
 = form.inputs do
   = form.input :title, :label => 'Otsikko'
   = form.input :content, :label => 'Viesti'
-  = form.input :commentable, :label => 'Kohde', :as => :select, :collection => Section.find(:all, :conditions => ["parent_id NOT NULL"], :select => [:id, :name])
+  = form.input :commentable, :label => 'Kohde', :as => :select, :collection => Section.leaf
   = form.input :author, :label => 'Kirjoittaja'
   = form.input :email, :label => 'Sähköposti'
 
