--- a/app/views/admin/news/index.html.haml
+++ b/app/views/admin/news/index.html.haml
@@ -3,6 +3,11 @@
   %a{:href => new_admin_news_path, :title => 'Luo uusi uutinen'}= image_tag('add.png')
   %a{:href => new_admin_news_path}= 'Luo uusi uutinen'
   
+%form(action= admin_change_section_path method='POST')
+  %label{:for => "selected_section_name"} Joukkueosio: 
+  =collection_select(:selected_section, :id, Section.leafs, :id, :name, :prompt => true)
+  %input(type='submit' value='Valitse')
+  
 %h2 Uutiset
 %table
   %thead
