Removed border from images.

--- a/public/stylesheets/admin_style.css
+++ b/public/stylesheets/admin_style.css
@@ -7,6 +7,9 @@ h1 {
     letter-spacing:.09em;
     
 }
+img {
+	border:none;
+}
 #header {
     background-color: #f9f9f9;
     border-right:10px solid #c4d1eb;
