--- a/app/views/admin/seasons/new.html.haml
+++ b/app/views/admin/seasons/new.html.haml
@@ -1,4 +1,4 @@
-%h1= t '.title'
-%p= link_to t('back'), admin_seasons_path
+%h1= "Luo uusi kausi"
+%p= link_to "Takaisin", admin_seasons_path
 
-= render :partial => 'form', :locals => {:url => admin_seasons_path(@admin_season)}
+= render :partial => 'form', :locals => {:url => admin_seasons_path}
