--- a/app/views/admin/seasons/index.html.haml
+++ b/app/views/admin/seasons/index.html.haml
@@ -1,15 +1,18 @@
-%h1= t('.title')
-%p= link_to t('.new_season'), new_admin_season_path
+%h1= 'Kaudet'
+
+%p
+  %a{:href => new_admin_season_path, :title => 'Luo uusi kausi'}= image_tag('add.png')
+  %a{:href => new_admin_season_path}= 'Luo uusi kausi'
 
 %table
   %thead
     %tr
-
-      %th{:colspan => 3}= t 'actions'
+      %th{:colspan => 3}= 'Toiminnot'
   
   %tbody
     - for season in @admin_seasons
       %tr{ :class => cycle(:odd, :even) }
-
-        %td.action= link_to t('edit'), edit_admin_season_path(season)
-        %td.action= link_to 'poista', admin_season_path(season), :confirm => 'ookko varma', :method => :delete
+        %td= season
+        %td.action= link_to image_tag('pencil.png'), edit_admin_season_path(season), :title => 'Muokkaa'
+        %td.action= link_to image_tag('cross.png'), admin_season_path(season), :title => 'Poista',
+          :confirm => "Haluatko varmasti poistaa kauden \"#{season}\"?", :method => :delete
