--- a/app/views/admin/seasons/_form.html.haml
+++ b/app/views/admin/seasons/_form.html.haml
@@ -1,9 +1,9 @@
-- semantic_form_for @admin_season, :url => url do |form| 
-  - form.inputs do
+= semantic_form_for @admin_season, :url => url do |form| 
+  = form.inputs do
     = form.input :section, :as => :select, :label => "Joukkueosio",
       :collection => Section.find(:all, :conditions => ["parent_id NOT NULL"])      
     = form.input :start_year, :label => "Aloitusvuosi"
     = form.input :division, :label => 'Divisioona'
     = form.input :history, :label => 'Historiakertomus'
-  - form.buttons do
+  = form.buttons do
     = form.commit_button :label => 'Tallenna'
