--- a/app/views/layouts/admin/application.html.haml
+++ b/app/views/layouts/admin/application.html.haml
@@ -4,7 +4,7 @@
     %link{ :rel => "shortcut icon", :href => "/favicon.ico", :type => "image/x-icon"}/
     %title= "ISB Admin" + controller.controller_name.capitalize
     = csrf_meta_tag
-    = stylesheet_link_tag :all
+    = stylesheet_link_tag "admin_style.css", "formtastic.css", "formtastic_changes.css"
     = javascript_include_tag :defaults
   %body
     .header#header
