Added link to members page.

--- a/app/views/layouts/admin/_menu.html.haml
+++ b/app/views/layouts/admin/_menu.html.haml
@@ -3,3 +3,4 @@
   %li= link_to 'Kaudet', admin_seasons_path
   %li= link_to 'Joukkueosiot', admin_sections_path
   %li= link_to 'Vieraskirja', admin_comments_path
+  %li= link_to 'Pelaajat', admin_members_path
