Refactored Season views.

--- a/app/views/admin/seasons/edit.html.haml
+++ b/app/views/admin/seasons/edit.html.haml
@@ -2,4 +2,4 @@
 %p
   = link_to t('back'), admin_seasons_path
   
-= render :partial => 'form', :locals => {:url => admin_season_path(@admin_season)}
+= render :partial => 'form', :locals => {:url => admin_season_path(@season)}
