--- a/app/views/admin/seasons/_form.html.haml
+++ b/app/views/admin/seasons/_form.html.haml
@@ -1,4 +1,4 @@
-= semantic_form_for @admin_season, :url => url do |form| 
+= semantic_form_for @season, :url => url do |form| 
   = form.inputs do
     = form.input :section, :as => :select, :label => "Joukkueosio",
       :collection => Section.find(:all, :conditions => ["parent_id NOT NULL"])      
