--- a/app/views/admin/seasons/index.html.haml
+++ b/app/views/admin/seasons/index.html.haml
@@ -10,7 +10,7 @@
       %th{:colspan => 3}= 'Toiminnot'
   
   %tbody
-    - for season in @admin_seasons
+    - for season in @seasons
       %tr{ :class => cycle(:odd, :even) }
         %td= season
         %td.action= link_to image_tag('pencil.png'), edit_admin_season_path(season), :title => 'Muokkaa'
