Changed warning flash message to alert.

--- a/app/views/layouts/admin/application.html.haml
+++ b/app/views/layouts/admin/application.html.haml
@@ -12,7 +12,7 @@
     .menu#menu= render :partial => 'layouts/admin/menu'
 
     #content
-      #notice= flash[:warning] || flash[:notice]
+      #notice= flash[:alert] || flash[:notice]
       = yield
       
     #footer
