Refactored to use Section.leafs.

--- a/app/views/admin/news/_form.html.haml
+++ b/app/views/admin/news/_form.html.haml
@@ -1,5 +1,5 @@
 = form.inputs do
   = form.input :sections, :as => :check_boxes, :label => 'Joukkueosiot',
-    :collection => Section.find(:all, :conditions => ["parent_id NOT NULL"])
+    :collection => Section.leafs
   = form.input :title, :label => 'Otsikko'
   = form.input :content, :label => 'Sisältö'
