Added section selection dropdown.

--- a/app/views/admin/seasons/index.html.haml
+++ b/app/views/admin/seasons/index.html.haml
@@ -3,6 +3,8 @@
 %p
   %a{:href => new_admin_season_path, :title => 'Luo uusi kausi'}= image_tag('add.png')
   %a{:href => new_admin_season_path}= 'Luo uusi kausi'
+  
+= section_selection
 
 %table
   %thead
