Fixed wrong path.

--- a/app/views/admin/team_standings/edit_multiple.html.haml
+++ b/app/views/admin/team_standings/edit_multiple.html.haml
@@ -1,6 +1,6 @@
 %h1 Sarjataulukko
 
-= form_tag(update_multiple_admin_team_standings_path(), :method => 'put') do
+= form_tag(update_multiple_admin_season_partition_team_standings_path(@season, @partition), :method => 'put') do
   %table
     %thead
       %tr
