--- a/app/views/admin/partitions/show.html.haml
+++ b/app/views/admin/partitions/show.html.haml
@@ -1,3 +1,14 @@
-%h1= @partition
+%h1 #{@partition} kaudella #{@partition.season} 
 
 %p= link_to 'Takaisin', admin_seasons_path
+%p= link_to 'Sarjataulukko', edit_multiple_admin_season_partition_team_standings_path(@partition.season, @partition)
+
+%h2 Joukkueet
+%p
+  %a{:href => new_admin_season_partition_team_standing_path(@partition.season, @partition), :title => 'Luo uusi joukkue'}= image_tag('add.png')
+  %a{:href => new_admin_season_partition_team_standing_path(@partition.season, @partition)}= 'Luo uusi joukkue'
+  
+%table
+  - for team in @partition.team_standings
+    %tr{ :class => cycle(:odd, :even) }
+      %td= team
