Set height and width of the header image. Edited the header text.

--- a/app/views/layouts/admin/_header.html.haml
+++ b/app/views/layouts/admin/_header.html.haml
@@ -1,3 +1,3 @@
 .header_left
-  %img{:src => '/images/isb_logo_small.png'}
-  %span#header_text Ilmajoen Salibandy  :: Hallintasivut
+  %img{:src => '/images/isb_logo_small.png', :height => 60, :width => 60}
+  %span#header_text Hallintasivut
