Moved partition operation links to show season view.

--- a/app/views/admin/seasons/index.html.haml
+++ b/app/views/admin/seasons/index.html.haml
@@ -15,20 +15,13 @@
     - for season in @seasons
       -season_row_class = cycle(:odd, :even)
       %tr{ :class => season_row_class }
-        %td= season
+        %td.action= link_to season, admin_season_path(season)
         %td.action= link_to image_tag('pencil.png'), edit_admin_season_path(season), :title => 'Muokkaa'
         %td.action= link_to image_tag('cross.png'), admin_season_path(season), :title => 'Poista',
           :confirm => "Haluatko varmasti poistaa kauden \"#{season}\"?", :method => :delete
       
       - for partition in season.partitions
         %tr{ :class => season_row_class }
-          %td
-            = image_tag('bullet_blue.png')
+          %td{ :colspan => 3 }
+            = image_tag('bullet_blue.png', :size => '16x16')
             = link_to partition, admin_season_partition_path(season, partition)
-          %td
-          %td.action= link_to image_tag('cross.png'), admin_season_partition_path(season, partition), :title => 'Poista',
-          :confirm => "Haluatko varmasti poistaa kausiosion \"#{season}\"?", :method => :delete
-      %tr{ :class => season_row_class }
-        %td{:colspan => 3}
-          = link_to image_tag('add.png'), new_admin_season_partition_path(season), :title => 'Luo uusi joukkueosio'
-          = link_to "Luo uusi joukkueosio", new_admin_season_partition_path(season), :title => 'Luo uusi joukkueosio'
