--- a/app/views/admin/seasons/new.html.haml
+++ b/app/views/admin/seasons/new.html.haml
@@ -1,4 +1,16 @@
 %h1= "Luo uusi kausi"
 %p= link_to "Takaisin", admin_seasons_path
 
-= render :partial => 'form', :locals => {:url => admin_seasons_path}
+= semantic_form_for @season, :url => admin_seasons_path do |form| 
+  = form.inputs do
+    = form.input :section, :as => :select, :label => "Joukkueosio",
+      :collection => Section.leafs, :include_blank => false
+    = form.input :start_year, :label => "Aloitusvuosi"
+    = form.input :division, :label => 'Divisioona'
+    
+  = form.semantic_fields_for :partitions do |p|
+    = p.inputs do
+      = p.input :name, :label => "Kausiosio"
+
+  = form.buttons do
+    = form.commit_button :label => 'Tallenna'
