--- a/app/views/layouts/admin/application.html.haml
+++ b/app/views/layouts/admin/application.html.haml
@@ -1,6 +1,7 @@
 !!!
 %html
   %head
+    %meta{ :charset => 'UTF-8' }
     %link{ :rel => "shortcut icon", :href => "/favicon.ico", :type => "image/x-icon"}/
     %title= "ISB Admin" + controller.controller_name.capitalize
     = csrf_meta_tag
