--- a/app/views/admin/links/edit.html.haml
+++ b/app/views/admin/links/edit.html.haml
@@ -1,7 +1,7 @@
-%h1 Editing link
+%h1 Muokkaa linkkiä
 
-= render 'form'
+.context_navi
+  = link_to image_tag('arrow_left.png', :size => '16x16'), admin_link_category_path(@link.category)
+  = link_to 'Takaisin', admin_link_category_path(@link.category)
 
-= link_to 'Show', @link
-\|
-= link_to 'Back', links_path
+= render :partial => 'form', :locals => {:url => admin_link_category_link_path(@link)}
