--- a/app/views/admin/link_categories/edit.html.haml
+++ b/app/views/admin/link_categories/edit.html.haml
@@ -1,7 +1,7 @@
-%h1 Editing link_category
+%h1 Muokkaa linkkikategoriaa #{@link_category}
 
-= render 'form'
+.context_navi
+  = link_to image_tag('arrow_left.png', :size => '16x16'), admin_link_categories_path 
+  = link_to 'Takaisin', admin_link_categories_path
 
-= link_to 'Show', @link_category
-\|
-= link_to 'Back', link_categories_path
+= render :partial => 'form', :locals => {:url => admin_link_category_path()}
