--- a/app/views/admin/link_categories/new.html.haml
+++ b/app/views/admin/link_categories/new.html.haml
@@ -1,5 +1,9 @@
-%h1 New link_category
+%h1 Uusi linkkikategoria
 
-= render 'form'
+.context_navi
+  = link_to image_tag('arrow_left.png', :size => '16x16'), admin_link_categories_path 
+  = link_to 'Takaisin', admin_link_categories_path
 
-= link_to 'Back', link_categories_path
+%p Joukkueosio: #{@selected_section}
+
+= render :partial => 'form', :locals => {:url => admin_link_categories_path()}
