--- a/app/views/admin/links/_form.html.haml
+++ b/app/views/admin/links/_form.html.haml
@@ -1,19 +1,7 @@
-= form_for @link do |f|
-  -if @link.errors.any?
-    #error_explanation
-      %h2= "#{pluralize(@link.errors.count, "error")} prohibited this link from being saved:"
-      %ul
-        - @link.errors.full_messages.each do |msg|
-          %li= msg
+= semantic_form_for @link, :url => url do |form|
+  = form.inputs do
+    = form.input :name, :label => "Nimi"
+    = form.input :url, :label => "Osoite"
 
-  .field
-    = f.label :name
-    = f.text_field :name
-  .field
-    = f.label :url
-    = f.text_field :url
-  .field
-    = f.label :category
-    = f.text_field :category
-  .actions
-    = f.submit 'Save'
+  = form.buttons do
+    = form.commit_button :label => 'Tallenna'
