Added link to links to menu.

--- a/app/views/layouts/admin/_menu.html.haml
+++ b/app/views/layouts/admin/_menu.html.haml
@@ -4,3 +4,4 @@
   %li= link_to 'Tilastot', admin_latest_standings_path
   %li= link_to 'Vieraskirja', admin_comments_path
   %li= link_to 'Pelaajat', admin_members_path
+  %li= link_to 'Linkit', admin_link_categories_path
